--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,13 +8,7 @@
     android:id="@+id/SPEET">
 
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+
 
     <ImageView
         android:layout_width="wrap_content"
@@ -22,8 +16,7 @@
         android:id="@+id/imageView"
         android:src="@drawable/logo_big"
         android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/sign_in_button"
-        android:layout_alignEnd="@+id/sign_in_button" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,6 +28,13 @@
         android:textColor="#ff5200ff"
         android:textAlignment="center"
         android:layout_above="@+id/imageView"
+        android:layout_centerHorizontal="true" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
