--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,11 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="nl.hro.projectapp.LoginActivity"
+    tools:context="nl.hro.projectapp.MainActivity"
     android:id="@+id/SPEET">
-
-
-
 
     <ImageView
         android:layout_width="wrap_content"
