--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -3,7 +3,10 @@
     android:layout_height="match_parent" tools:context="nl.hro.projectapp.EventFeed">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Event Feed fragment" />
 
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="New Text"
+            android:id="@+id/Debug" android:layout_gravity="center"/>
 </FrameLayout>
