--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -11,10 +11,10 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="280dp"
+        android:layout_gravity="center">
 
     </TableRow>
-
 
 
 </FrameLayout>
