--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -6,7 +6,74 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="nl.hro.projectapp.NewEventActivity">
 
-    <TextView android:text="new event scherm" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="Event Name" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text_event_name"
+        android:textSize="22dp"
+        android:layout_alignBottom="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="false" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_alignParentTop="true"
+        android:textColor="#6635E6"
+        android:textIsSelectable="true"
+        android:textSize="22dp"
+        android:layout_alignParentRight="false"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/text_minumum_age"
+        android:layout_toEndOf="@+id/text_minumum_age"
+        android:contentDescription="event name here"
+        android:editable="true" />
+
+    <TextView
+        android:text="Minimum Age"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text_minumum_age"
+        android:textSize="22dp"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_below="@+id/text_event_name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/editText2"
+        android:layout_alignBottom="@+id/text_minumum_age"
+        android:layout_toRightOf="@+id/input_start_date"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textSize="22dp"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_below="@+id/text_minumum_age"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="69dp" />
+
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/input_start_date"
+        android:minDate="System.currentTimeMillis() - 1000"
+        android:spinnersShown="false"
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner"
+        android:layout_alignTop="@+id/textView2"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText" />
 
 </RelativeLayout>
