--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -24,7 +24,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/input_event_name"
         android:inputType="text"
         android:layout_alignParentTop="true"
         android:textColor="#6635E6"
@@ -44,7 +44,7 @@
         android:id="@+id/text_minumum_age"
         android:textSize="20dp"
         android:layout_alignWithParentIfMissing="false"
-        android:layout_below="@+id/text_event_name"
+        android:layout_below="@+id/input_event_name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/input_minimum_age"
         android:layout_alignBottom="@+id/text_minumum_age"
         android:layout_toRightOf="@+id/input_start_date"
         android:layout_alignParentRight="true"
@@ -153,6 +153,13 @@
 
 
     </TimePicker>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="submit"
+        android:onClick="submitNewEvent"
+        />
 
 
 </RelativeLayout>
