--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:orientation="vertical" >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
         <ListView
                 android:id="@+id/listView"
                 android:layout_width="fill_parent"
@@ -11,13 +11,5 @@
                 android:divider="#0000CC"
                 >
         </ListView>
-
-    </LinearLayout>
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="280dp"
-        android:layout_gravity="center">
-
-    </TableRow>
 </FrameLayout>
 
